update cart wallet

--- a/catalog/view/theme/so-buyshop/template/header/header2.twig
+++ b/catalog/view/theme/so-buyshop/template/header/header2.twig
@@ -70,17 +70,18 @@
 				<div class="header-center-right col-md-9 col-sm-12 col-xs-12">	
 					<div class="row">
 						{% if search_block %}
-							<div class="search-header-w col-lg-9 col-md-8 col-sm-8 col-xs-12">
+							<div class="search-header-w col-lg-8 col-md-8 col-sm-8 col-xs-12">
 								<span class="hidden-lg hidden-md hidden-sm search-mobi"><i class="fa fa-search"></i></span>	
 								<div class="searchbox">			
 								 {{ search_block }}
 								</div>
 							</div>
 						{% endif %} 
-							
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="shopping_cart">							
 							 	{{ cart }}
 							</div>
+						</div>
 							
 					</div>
 				</div>
