--- a/system/storage/modification/catalog/view/theme/so-buyshop/template/common/cart.twig
+++ b/system/storage/modification/catalog/view/theme/so-buyshop/template/common/cart.twig
@@ -62,3 +62,9 @@
     {% endif %}
   </ul>
 </div>
+<div style="margin-left:220px; width:200px; height:50px; margin-top: -57px;">
+      <div>
+          <span><b> {{text_username}}{{ user }}</b></span></br>
+          <span><b> {{text_wallet}} {{ wallet }}</b></span>
+      </div>
+</div>
