--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -1359,20 +1359,66 @@
                     <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_reward_set }}">{{ entry_value_count }}</span></label>
                     <div id="add_more" class="col-sm-10">
                       <div>
-                          <select class="form-control-reward" name="select_name[]">
-                            <option value="1" >{{text_percent}}</option>
-                            <option value="2" >{{text_fixed}}</option>
+                          <select name="type" id="input-type" class="form-control-reward">
+                          {% if type == '1' %}
+                             <option value="1" selected="selected">{{text_percent}}</option>
+                             {% else %}
+                             <option value="1">{{text_percent}}</option>
+                             {% endif %}
+                             {% if type == '1' %}
+                             <option value="1" selected="selected">{{text_fixed}}</option>
+                             {% else %}
+                             <option value="1">{{text_fixed}}</option>
+                             {% endif %}
                           </select>
                           <input type="text" value="" name="min_amount" placeholder="{{text_min}}" class="form-control-reward"/>
                           <input type="text" value="" name="max_amount" placeholder="{{text_max}}" class="form-control-reward"/>
                           <input type="text" value="" name="percentage_value" placeholder="{{text_percents}}" class="form-control-reward"/>
                           <input type="text" value="" name="fixed_value"  placeholder="{{text_fix}}" class="form-control-reward"/>            
                       </div>
-                       <div>
+                       {# <div>
                           <button type="button" id="add" class="btn btn-primary"><i class="fa fa-plus"></i></button>
-                       </div>
+                       </div> #}
                     </div>
                   </div>
+
+                <div class="form-group">
+                  <label class="col-sm-2 control-label" for="input-product"><span data-toggle="tooltip" title="{{ help_product }}">{{ entry_product }}</span></label>
+                    <div class="col-sm-10">
+                      <input type="text" name="product" value="" placeholder="{{ entry_product }}" id="input-product" class="form-control" />
+                      <div id="product" class="well well-sm" style="height: 150px; overflow: auto;"> {% for product in product %}
+                        <div id="product{{product_id }}"><i class="fa fa-minus-circle"></i> {{ product.name }}
+                          <input type="hidden" name="product[]" value="{{product_id }}" />
+                        </div>
+                        {% endfor %} </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label" for="input-category"><span data-toggle="tooltip" title="{{ help_category }}">{{ entry_category }}</span></label>
+                <div class="col-sm-10">
+                  <input type="text" name="category" value="" placeholder="{{ entry_category }}" id="input-category" class="form-control" />
+                  <div id="coupon-category" class="well well-sm" style="height: 150px; overflow: auto;"> {% for coupon_category in coupon_category %}
+                    <div id="coupon-category{{ coupon_category.category_id }}"><i class="fa fa-minus-circle"></i> {{ coupon_category.name }}
+                      <input type="hidden" name="coupon_category[]" value="{{ coupon_category.category_id }}" />
+                    </div>
+                    {% endfor %} </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-sm-2 control-label" for="input-date-start">{{ entry_date_start }}</label>
+                <div class="col-sm-3">
+                  <div class="input-group date">
+                    <input type="text" name="date_start" value="{{ date_start }}" placeholder="{{ entry_date_start }}" data-date-format="YYYY-MM-DD" id="input-date-start" class="form-control" />
+                    <span class="input-group-btn">
+                    <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+                    </span></div>
+                </div>
+              </div>
+
+
+
               </fieldset>
               <fieldset>
                   <legend>{{ entry_reward_point }}</legend>
@@ -1455,7 +1501,7 @@ $('select[name=\'config_country_id\']').on('change', function() {
 
 $('select[name=\'config_country_id\']').trigger('change');
 //--></script>
-<script type="text/javascript"><!--
+{# <script type="text/javascript"><!--
 $(document).ready(function() {
      $("#add").click(function(){
        $("#add_more").append( '<div>'+
@@ -1470,6 +1516,6 @@ $(document).ready(function() {
             '</div>');
    });
 });
-//--></script>
+//--></script> #}
 </div>
 {{ footer }} 
